5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4124/executions/1593_2043.log
== TEST (2019-03-26 10:41:27) 
-- CODE:
not1 = float(input("Digite a primeira nota: "))
not2 = float(input("Digite a segunda nota: "))
not3 = float(input("Digite a terceira nota: "))

med = ((not1 * 1) + (not2 * 2) + (not3 * 3) + (not4 * 4))/(1 + 2 + 3 + 4)
print(round(med,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    med = ((not1 * 1) + (not2 * 2) + (not3 * 3) + (not4 * 4))/(1 + 2 + 3 + 4)
NameError: name 'not4' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:42:48) 
-- CODE:
not1 = float(input("Digite a primeira nota: "))
not2 = float(input("Digite a segunda nota: "))
not3 = float(input("Digite a terceira nota: "))
not4 = float(input("Digite a quarta nota: "))

med = ((not1 * 1) + (not2 * 2) + (not3 * 3) + (not4 * 4))/(1 + 2 + 3 + 4)
print(round(med,2))

-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:42:58) 
-- CODE:
not1 = float(input("Digite a primeira nota: "))
not2 = float(input("Digite a segunda nota: "))
not3 = float(input("Digite a terceira nota: "))
not4 = float(input("Digite a quarta nota: "))

med = ((not1 * 1) + (not2 * 2) + (not3 * 3) + (not4 * 4))/(1 + 2 + 3 + 4)
print(round(med,2))

-- EXECUTION TIME:
0.163719
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
